<resources>

    <string name="app_name">Apprendendo</string>
    <string name="btLoginText">Log in with e-mail</string>
    <string name="btSignUpText">Sign up with a new account</string>
    <string name="emailloginvalidation">Please insert your E-mail address</string>
    <string name="passwordloginvalidation">Please insert your password</string>
    <string name="pg_loggingin">Logging in, please wait.</string>
    <string name="loginfail">Could not find the user, click Sign Up if you do not have an account</string>
    <string name="create_title">Create your account</string>
    <string name="create_username">User Name</string>
    <string name="create_email">E-mail</string>
    <string name="create_password">Password</string>
    <string name="create_confirmpassword">Confirm the password</string>
    <string name="create_name">Name</string>
    <string name="create_phone">Cell Phone Number</string>
    <string name="create_datebirth">Date of Birth</string>
    <string name="create_biography">Biography</string>
    <string name="create_button">SignUp</string>
    <string name="signupmissing">Some informations are missing, please make sure all the fields are filled</string>
    <string name="radiobuttonmissing">You need to select a type for the ad.</string>
    <string name="typeTeacher">Teacher</string>
    <string name="typeStudent">Student</string>
    <string name="signupfailpassword">Passwords doesn\'t match</string>
    <string name="signupfail">Could not register. Please contact the administrators.</string>
    <string name="validationfail">Username already exists, choose another username</string>
    <string name="updatefail">Could not find the user. Please contact the administrators.</string>
    <string name="pg_signingup">Registering, please wait.</string>
    <string name="radioButtonEmpty">Please select the type of the account.</string>
    <string name="needcamera">The camera is needed to </string>
    <string name="updateWarning">WARNING!</string>
    <string name="updateMessage">Are you sure you want to update your information?</string>
    <string name="updateSuccess">Values successfully updated.</string>
    <string name="deleteMessage">Are you sure you want to DELETE your ad? This can\'t be undone!</string>
    <string name="sendInterestMessage">Do you want to send an interest for this ad?</string>
    <string name="sendNegotiation">Do you want to start a negotiation with this user?</string>
    <string name="create_interest_same_owner">You cannot send an interest for yourself.</string>
    <string name="create_interest_success">Interest sent to the ad owner with success!</string>

    <string name="menuOptionProfile">My Profile</string>
    <string name="menuOptionCreateAd">My Ads</string>
    <string name="menuOptionSearchAd">Search an Ad</string>
    <string name="menuOptionInterests">Interests</string>
    <string name="menuOptionNegotiation">My Negotiations</string>
    <string name="menuOptionContact">Contact or Suggestion?</string>
    <string name="menuOptionSchedule">My Schedule</string>
    <string name="menuHeaderSubtitle">Welcome to Apprendendo, the place where you can begin your new journey for learning.</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="textViewStartText">Tap anywhere to expand...</string>
    <string name="editTextEmailHint">Enter your e-mail</string>
    <string name="editTextPasswordHint">Password</string>
    <string name="btLoginFacebookText">Log in with Facebook</string>
    <string name="textViewSignUp">Don\'t have an account? Click here to sign up!</string>

    <string name="my_profile">My Profile</string>
    <string name="my_ads">My Advertisements</string>
    <string name="search_ads">Search an Advertisement</string>
    <string name="my_interests">My Interests</string>
    <string name="my_negotiations">My Negotiations</string>
    <string name="sw_account">Enable/Disable account</string>
    <string name="btUpdate">Update My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewSpecialty">Specialty:</string>
    <string name="textViewPeriod">Period:</string>

    <string name="create_ad">Create your Advertisement</string>
    <string name="my_ad">My advertisement</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="saturday">Saturday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="select_days">Select the days of classes</string>
    <string name="select_hour">Select the class period</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="textViewLastModified">Last Modified:</string>
    <string name="pg_create_ad">Creating Advertisement...</string>
    <string name="pg_loading_message">Loading messages...</string>
    <string name="create_ad_success">Advertisement created successfully</string>
    <string name="update_ad_success">Information updated successfully</string>
    <string name="delete_ad_success">Advertisement deleted successfully</string>
    <string name="txt_specialty">Specialty:</string>
    <string name="student">I\'m the Student</string>
    <string name="teacher">I\'m the Teacher</string>
    <string name="bt_create_ad">Create Advertisement</string>
    <string name="bt_update_ad">Update Info</string>
    <string name="bt_delete_ad">Delete Ad</string>
    <string name="searchStatement">Type your search below:</string>

    <!--DROPDOWN MENU (COMBOBOX) SPECIALTY-->

    <string name="dropDownItem1">Languages</string>
    <string name="dropDownItem2">Science</string>
    <string name="dropDownItem3">Business</string>
    <string name="dropDownItem4">Health</string>
    <string name="dropDownItem5">Computing</string>
    <string name="dropDownItem6">Art</string>
    <string name="dropDownItem7">Other</string>

    <string name="textViewType">Type:</string>
    <string name="textViewOwner">Owner:</string>
    <string name="textViewDaysAvailable">Days available for classes:</string>
    <string name="textViewPeriodAvailable">Periods of the day available:</string>
    <string name="textViewSendInterest">Click in the icon above to notify the advertisement owner that you are interested in this ad!</string>
    <string name="textViewUserName">User:</string>
    <string name="textViewNegotiate">Click the button to send a message to the interested negotiating about your ad</string>
    <string name="btNegotiate">Start a Negotiation</string>
    <string name="textViewAdTitle">Ad:</string>
    <string name="textViewUserAdOwner">Owner:</string>

</resources>
