<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menuOptionProfile" />
        <item
            android:id="@+id/nav_createAd"
            android:icon="@drawable/ic_ads"
            android:title="@string/menuOptionCreateAd" />
        <item
            android:id="@+id/nav_searchAd"
            android:icon="@drawable/ic_search2"
            android:title="@string/menuOptionSearchAd" />
        <item
            android:id="@+id/nav_interests"
            android:icon="@drawable/ic_interest"
            android:title="@string/menuOptionInterests" />
        <item
            android:id="@+id/nav_negotiation"
            android:icon="@drawable/ic_negotiation"
            android:title="@string/menuOptionNegotiation" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menuOptionContact" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/menuOptionSchedule" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="Logout"/>

    </group>



</menu>
