<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:title="@string/my_profile"
        android:elevation="@dimen/btCreateShadow"
        app:titleTextColor="@color/text"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="6"
            android:foregroundGravity="right"
            app:srcCompat="@drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/tf_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/create_username"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/create_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="textPassword"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/create_name"
            android:inputType="textPersonName"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/create_phone"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_datebirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/create_datebirth"
            android:textColor="@color/primaryText" />

        <EditText
            android:id="@+id/tf_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/create_biography"
            android:textColor="@color/primaryText" />

        <Switch
            android:id="@+id/sw_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/sw_account"
            android:textColor="@color/primaryText" />

        <Button
            android:id="@+id/btUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="6"
            android:background="@color/colorAccent"
            android:text="@string/btUpdate"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:elevation="@dimen/btCreateShadow"
            android:textColor="@color/text" />

    </LinearLayout>

</LinearLayout>